End of the begginner html

--- a/HTML-Personal_Site/index.html
+++ b/HTML-Personal_Site/index.html
@@ -7,6 +7,10 @@
     <title>Batu's Personal Web site</title>
   </head>
   <body>
+    <img
+      src="images/profile_photo.avif"
+      alt="This is Batuhan's profile picture"
+    />
     <h1>Tacettin Batuhan Bostanci</h1>
     <h2>Personal Web Site</h2>
     <p>
@@ -20,11 +24,8 @@
       <li>The Complete WEB development bootcamp</li>
       <li>The Complete Algorithms and Datastructure</li>
     </ul>
-    <h3>My Hobbies</h3>
-    <ol>
-      <li>Reading Books</li>
-      <li>Playing Games</li>
-      <li>Watching Movies</li>
-    </ol>
+    <a href="hobbies.html">My hobbies</a>
+    <br />
+    <a href="contact_information.html">Contact Information</a>
   </body>
 </html>
