End of the Intermediate HTML part

--- a/HTML-Personal_Site/contact_information.html
+++ b/HTML-Personal_Site/contact_information.html
@@ -12,5 +12,16 @@
       <p>personal_home_number</p>
       <p>pnkedin Account pnk</p>
     </ul>
+
+    <form class="" action="mailto:batuhanbostanci19@gmail.com" method="post">
+      <label for="Name"> Your Name:</label>
+      <input type="text" name="" id="" /><br />
+      <label for="Email">Your Email:</label>
+      <input type="text" name="" id="" /><br />
+      <label> Your Message:</label><br />
+      <textarea name="" id="" cols="30" rows="10"></textarea>
+      <br />
+      <input type="submit" name="" />
+    </form>
   </body>
 </html>
