--- a/HTML-Personal_Site/index.html
+++ b/HTML-Personal_Site/index.html
@@ -24,6 +24,61 @@
       <li>The Complete WEB development bootcamp</li>
       <li>The Complete Algorithms and Datastructure</li>
     </ul>
+
+    <h3>Work Experience</h3>
+
+    <table>
+      <thead>
+        <th>Year's</th>
+        <th>Company Information</th>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>2019-2020</td>
+          <td>Internship at Havelsan</td>
+        </tr>
+        <tr>
+          <td>2020</td>
+          <td>Candidate Engineer at ASELSAN</td>
+        </tr>
+      </tbody>
+    </table>
+    <h3>Skills</h3>
+
+    <table>
+      <tr>
+        <td>
+          <td>
+            <table>
+                <tr>
+                    <td>IOS development</td>
+                    <td>⭐️⭐️⭐️⭐️⭐️</td>
+                </tr>
+                <tr>
+                    <td>Android development</td>
+                    <td>⭐️⭐️⭐️⭐️</td>
+                </tr>
+            </table>
+          </td>
+        </td>
+        <td>
+            <table>
+                <tr>
+                    <td>IOS development</td>
+                    <td>⭐️⭐️⭐️</td>
+                </tr>
+                <tr>
+                    <td>Android development</td>
+                    <td>⭐️</td>
+                </tr>
+            </table>
+        </td>
+      </tr>
+    </table>
+
+    <hr />
+    <!-- Links to the other informations-->
     <a href="hobbies.html">My hobbies</a>
     <br />
     <a href="contact_information.html">Contact Information</a>
