Starting Begginer Css Part

--- a/HTML-Personal_Site/contact_information.html
+++ b/HTML-Personal_Site/contact_information.html
@@ -5,21 +5,13 @@
     <title>Contact Information</title>
   </head>
   <body>
-    <h1>Contact details</h1>
-    <ul>
-      <p>user_name@mail.com</p>
-      <p>personal_mobile_number</p>
-      <p>personal_home_number</p>
-      <p>pnkedin Account pnk</p>
-    </ul>
-
     <form class="" action="mailto:batuhanbostanci19@gmail.com" method="post">
       <label for="Name"> Your Name:</label>
-      <input type="text" name="" id="" /><br />
+      <input type="text" name="Name" id="" /><br />
       <label for="Email">Your Email:</label>
-      <input type="text" name="" id="" /><br />
+      <input type="text" name="Email" id="" /><br />
       <label> Your Message:</label><br />
-      <textarea name="" id="" cols="30" rows="10"></textarea>
+      <textarea name="YourMessage" id="" cols="30" rows="10"></textarea>
       <br />
       <input type="submit" name="" />
     </form>
