End of the Begginner CSS

--- a/HTML-Personal_Site/contact_information.html
+++ b/HTML-Personal_Site/contact_information.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Contact Information</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <form class="" action="mailto:batuhanbostanci19@gmail.com" method="post">
