--- a/HTML-Personal_Site/index.html
+++ b/HTML-Personal_Site/index.html
@@ -5,19 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Batu's Personal Web site</title>
-
-    <style>
-
-        body {
-            background-color: #EAF6F6;
-        }
-
-    </style>
-
+    <link rel="stylesheet" href="css/style.css">
+    
   </head>
-
-
-
 
   <body>
     <img
@@ -25,19 +15,21 @@
       alt="This is Batuhan's profile picture"
     />
     <h1>Tacettin Batuhan Bostanci</h1>
+
+    <hr>
     <h2>Personal Web Site</h2>
     <p>
       Hi, I am a student at
       <a href="http://www.agu.edu.tr/">Abdullah Gul University</a> and this is
       my personal web site.
     </p>
-
+    <hr>
     <h3>Book and Technology</h3>
     <ul>
       <li>The Complete WEB development bootcamp</li>
       <li>The Complete Algorithms and Datastructure</li>
     </ul>
-
+    <hr>
     <h3>Work Experience</h3>
 
     <table>
