adding missing final infos

--- a/Advanced-CSS/Grid/10.3 Mondrian Project/index.html
+++ b/Advanced-CSS/Grid/10.3 Mondrian Project/index.html
@@ -19,6 +19,14 @@
     But grid lines are transparent!
     */
 
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+      }
+
       .container {
         background-color: #000;
         width: 748px;
