--- a/FullyCss/01-Natours/starter/index.html
+++ b/FullyCss/01-Natours/starter/index.html
@@ -25,6 +25,9 @@
         <h1 class="heading-primary">
           <span class="heading-primary-main">Outdoors</span>
           <span class="heading-primary-sub">is where life happens</span>
+
+
+          <a href="#" class="btn btn-white">Discover our tours</a>
         </h1>
       </div>
     </header>
