End of the box color, styling list in plans

--- a/FullyCss/Css-Basics/Css-BoxModel/index.html
+++ b/FullyCss/Css-Basics/Css-BoxModel/index.html
@@ -17,19 +17,19 @@
   </head>
 
   <header class="main-header">
-    
     <div>
       <a href="index.html" class="main-header__brand">uHost</a>
-    </div><nav class="main-nav">
+    </div>
+    <nav class="main-nav">
       <ul class="main-nav__items">
-
         <li class="main-nav__item">
           <a href="packages/index.html">Packages</a>
-        </li class="main-nav__item">
+        </li>
+
+        <li class="main-nav__item"></li>
 
         <li class="main-nav__item">
           <a href="customers/index.html">Customers</a>
-          
         </li>
 
         <li class="main-nav__item main-nav__item--cta">
@@ -46,7 +46,51 @@
       </section>
       <section id="plans">
         <h1 class="section-title">Choose Your Plan</h1>
-        <p>Make sure you get the most for your money!</p>
+        <div>
+          <article class="plan">
+            <h1 class="plan__title">FREE</h1>
+            <h2 class="plan__price">$0/month</h2>
+            <h3 class="plan__description">For hobby projects or small teams.</h3>
+            <ul class="class="plan__feature"s">
+              <li class="plan__feature">1 Workspace</li>
+              <li class="plan__feature">Unlimited Traffic</li>
+              <li class="plan__feature">10GB Storage</li>
+              <li class="plan__feature">Basic Support</li>
+            </ul>
+            <div>
+              <button class="button">CHOOSE PLAN</button>
+            </div>
+          </article>
+          <article class="plan plan--highligthed">
+            <h1 class="plan__annotation">RECOMMENDED</h1>
+            <h1 class="plan__title">PLUS</h1>
+            <h2 class="plan__price">$29/month</h2>
+            <h3 class="plan__description">For ambitious projects.</h3>
+            <ul class="class="plan__feature"s">
+              <li class="plan__feature">5 Workspaces</li>
+              <li class="plan__feature">Unlimited Traffic</li>
+              <li class="plan__feature">100GB Storage</li>
+              <li class="plan__feature">Plus Support</li>
+            </ul>
+            <div>
+              <button class="button">CHOOSE PLAN</button>
+            </div>
+          </article>
+          <article class="plan">
+            <h1 class="plan__title">PREMIUM</h1>
+            <h2 class="plan__price">$99/month</h2>
+            <h3 class="plan__description">Your enterprise solution.</h3>
+            <ul class="class="plan__feature"s">
+              <li class="plan__feature">10 Workspaces</li>
+              <li class="plan__feature">Unlimited Traffic</li>
+              <li class="plan__feature">Unlimited Storage</li>
+              <li class="plan__feature">Priority Support</li>
+            </ul>
+            <div>
+              <button class="button">CHOOSE PLAN</button>
+            </div>
+          </article>
+        </div>
       </section>
     </main>
   </body>
