--- a/FullyCss/Css-Basics/Css-BoxModel/index.html
+++ b/FullyCss/Css-Basics/Css-BoxModel/index.html
@@ -50,8 +50,10 @@
           <article class="plan">
             <h1 class="plan__title">FREE</h1>
             <h2 class="plan__price">$0/month</h2>
-            <h3 class="plan__description">For hobby projects or small teams.</h3>
-            <ul class="class="plan__feature"s">
+            <h3 class="plan__description">
+              For hobby projects or small teams.
+            </h3>
+            <ul class="class=" plan__feature>
               <li class="plan__feature">1 Workspace</li>
               <li class="plan__feature">Unlimited Traffic</li>
               <li class="plan__feature">10GB Storage</li>
@@ -66,7 +68,7 @@
             <h1 class="plan__title">PLUS</h1>
             <h2 class="plan__price">$29/month</h2>
             <h3 class="plan__description">For ambitious projects.</h3>
-            <ul class="class="plan__feature"s">
+            <ul class="class=" plan__feature>
               <li class="plan__feature">5 Workspaces</li>
               <li class="plan__feature">Unlimited Traffic</li>
               <li class="plan__feature">100GB Storage</li>
@@ -80,7 +82,7 @@
             <h1 class="plan__title">PREMIUM</h1>
             <h2 class="plan__price">$99/month</h2>
             <h3 class="plan__description">Your enterprise solution.</h3>
-            <ul class="class="plan__feature"s">
+            <ul class="class=" plan__feature>
               <li class="plan__feature">10 Workspaces</li>
               <li class="plan__feature">Unlimited Traffic</li>
               <li class="plan__feature">Unlimited Storage</li>
@@ -96,22 +98,18 @@
       <section id="key-features">
         <h1 class="section-title">Many Good Reasons to Stick Around</h1>
 
-        <ul>
-          <li>
-            <div>
-
-            </div>
-            <p>3,857,000 Trusting Customers</p>
+        <ul class="key-feature__list">
+          <li class="key-feature">
+            <div class="key-feature__image"></div>
+            <p class="key-feature__description">3,857,000 Trusting Customers</p>
           </li>
-          <li>
-            <div>
-
-            </div>
-            <p>99.999% Uptime Guarantee</p>
+          <li class="key-feature">
+            <div class="key-feature__image"></div>
+            <p class="key-feature__description">99.999% Uptime Guarantee</p>
           </li>
-          <li>
-            <div></div>
-            <p>Lighting Fast CDN</p>
+          <li class="key-feature">
+            <div class="key-feature__image"></div>
+            <p class="key-feature__description">Lighting Fast CDN</p>
           </li>
         </ul>
       </section>
