--- a/FullyCss/Css-Basics/Css-BoxModel/index.html
+++ b/FullyCss/Css-Basics/Css-BoxModel/index.html
@@ -114,5 +114,18 @@
         </ul>
       </section>
     </main>
+
+    <footer class="main-footer">
+      <nav>
+        <ul class="main-footer_links">
+          <li>
+            <a href="#">Support</a>
+          </li>
+          <li>
+            <a href="#"> Terms of Use</a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
