--- a/FullyCss/Css-Basics/Css-BoxModel/index.html
+++ b/FullyCss/Css-Basics/Css-BoxModel/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="shared.css" />
     <link rel="stylesheet" href="main.css" />
   </head>
 
@@ -117,11 +118,11 @@
 
     <footer class="main-footer">
       <nav>
-        <ul class="main-footer_links">
-          <li>
+        <ul class="main-footer__links">
+          <li class="main-footer__link">
             <a href="#">Support</a>
           </li>
-          <li>
+          <li class="main-footer__link">
             <a href="#"> Terms of Use</a>
           </li>
         </ul>
