Adding the z index in the packages

--- a/FullyCss/Css-Basics/Css-BoxModel/packages/index.html
+++ b/FullyCss/Css-Basics/Css-BoxModel/packages/index.html
@@ -37,6 +37,7 @@
   </header>
 
   <body>
+    <div class="background"></div>
     <main>
       <section class="package" id="plus">
         <a href="#">
